--- a/assets/sass/utilities/_reset.scss
+++ b/assets/sass/utilities/_reset.scss
@@ -1,4 +1,6 @@
-body{
+/* Reset */
+
+body {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   margin: 0;
@@ -9,7 +11,8 @@ body{
   line-height: 1;
   word-break:break-all;
 }
-div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video, input, textarea{
+
+div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video, input, textarea {
   margin: 0;
   padding: 0;
   border: none;
@@ -19,42 +22,52 @@ div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, add
   vertical-align: baseline;
   background: transparent;
 }
-img{
+
+img {
   vertical-align: bottom;
 }
+
 article, aside, details, figcaption, figure, footer, header, menu, nav, section, div, address, iframe, canvas, hr, textarea {
   display:block;
   line-height: 1;
 }
+
 iframe{
   max-width: 100% !important;
 }
+
 a,label{
   cursor: pointer;
   text-decoration: none;
 }
+
 blockquote {
   padding: 0;
   margin: 0;
   display:block;
 }
+
 address,em{
   font-style:normal;
 }
+
 hr{
   border:0;
   margin:0;
   padding:0;
 }
-ul,ol,li{
+
+ul,ol,li {
   list-style:none;
 }
-textarea{
+
+textarea {
   resize:vertical;
   overflow:hidden;
   -webkit-appearance:none;
   border:none;
 }
+
 input,button,select {
   vertical-align: middle;
   border-radius: 0px;
@@ -66,12 +79,18 @@ input,button,select {
   -webkit-appearance:none;
   outline: none;
 }
-table{
+
+table {
   border-collapse:collapse;
 }
+
 *:before,
-*:after{
+*:after {
   padding: 0;
   margin: 0;
   line-height: 1;
+}
+
+* {
+  box-sizing: border-box;
 }
