--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,10 +1,8 @@
-/* Import styles start here */
+/* Import styles */
 
+@import "font-awesome/fontawesome";
 @import "utilities/utilities";
 @import "global-components/_global-components";
 @import "specific-components/specific-components";
 @import "media-queries/media-queries";
-@import "font-awesome/fontawesome";
-
-/* Import styles end here */
 
