--- a/assets/sass/utilities/_utilities.scss
+++ b/assets/sass/utilities/_utilities.scss
@@ -1,8 +1,9 @@
- /* Import utilities */
+/* Import utilities */
 
+@import "fonts";
 @import "settings";
 @import "mixins";
 @import "reset";
 @import "spaces";
-@import "fonts";
 @import "typography";
+@import "display";
